--- a/index.html
+++ b/index.html
@@ -1,15 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-    <!-- script -->
-    <script src="./jquery.js"></script>
-    <script src="./app.js"></script>
-</head>
-<body>
-    
-</body>
+<html lang="en" dir="ltr">
+  <head>
+	<meta charset="utf-8">
+	<title>Kaus ToDo</title>
+	<!-- StyleSheets -->
+	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.css">
+	<script src="jquery.js"></script>
+	<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> -->
+  </head>
+  <body>
+
+	<div class="container">
+	  <input type="text" class="txtb" placeholder="Add a task.." >
+	  <h3>Not Completed</h3>
+	  <div class="notcomp">
+	  </div>
+	  <h3>Completed</h3>
+	  <div class="comp">
+	  </div>
+	</div>
+
+	<!-- Script -->
+	<script src="script.js"></script>
+
+  </body>
 </html>
