--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 	<!-- StyleSheets -->
 	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.css">
+	<!-- JQuery -->
 	<script src="jquery.js"></script>
-	<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> -->
   </head>
   <body>
 
@@ -16,6 +16,7 @@
 	  <h3>Not Completed</h3>
 	  <div class="notcomp">
 	  </div>
+	  <hr size="2" width="100%" align="left" color="black">
 	  <h3>Completed</h3>
 	  <div class="comp">
 	  </div>
